<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!-- <version>1.5.6.RELEASE</version> -->
		<version>1.5.15.RELEASE</version>
		
		<relativePath />
	</parent>


	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xier</groupId>
	<artifactId>common-dynamic-data</artifactId>
	<packaging>jar</packaging>
	<name>common-dynamic-data</name>
	<version>1.6-SNAPSHOT</version>
	<description>common-dynamic-data</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-data.version>1.13.6.RELEASE</spring-data.version>
		<swagger2markup.version>1.3.3</swagger2markup.version>
		<swagger.output.dir>${project.build.directory}/swagger</swagger.output.dir>
		<asciidoctor.input.directory>${project.basedir}/src/docs/asciidoc</asciidoctor.input.directory>
		<swagger.snippetOutput.dir>${project.build.directory}/asciidoc/snippets</swagger.snippetOutput.dir>
		<generated.asciidoc.directory>${project.build.directory}/asciidoc/generated</generated.asciidoc.directory>
		<asciidoctor.html.output.directory>${project.build.directory}/asciidoc/html</asciidoctor.html.output.directory>
		<asciidoctor.pdf.output.directory>${project.build.directory}/asciidoc/pdf</asciidoctor.pdf.output.directory>
		<swagger.input>${swagger.output.dir}/swagger-demo-ui.json</swagger.input>
	</properties>


	<dependencies>
	
	
		<dependency>
			<groupId>com.google.collections</groupId>
			<artifactId>google-collections</artifactId>
			<version>1.0</version>	
	
		</dependency>
		
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>25.1-jre</version>
		    <exclusions>
				<exclusion>
					<artifactId>checker-compat-qual</artifactId>
					<groupId>org.checkerframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>
			
		
		<dependency>
			<groupId>com.google.collections</groupId>
			<artifactId>google-collections</artifactId>
			<version>1.0</version>	
	
		</dependency>
	
	<!-- 强行升级 -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-test</artifactId>
		    <!-- <version>4.3.9.RELEASE</version> --><!--$NO-MVN-MAN-VER$-->
		    <scope>test</scope>
		</dependency>

		<!--  swagger  接口 -->
		<dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.4.0</version>
        </dependency>
        
        <dependency>
		    <groupId>io.swagger.core.v3</groupId>
		    <artifactId>swagger-models</artifactId>
		    <version>2.0.2</version>
		</dependency>
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
		  	<artifactId>jackson-databind</artifactId>
		</dependency>
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
		  	<artifactId>jackson-core</artifactId>
		  	<version>2.9.6</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
		  	<artifactId>jackson-annotations</artifactId>
		</dependency>
		
		<dependency>
  			<groupId>org.springframework</groupId>
  			<artifactId>spring-core</artifactId>
  			<version>5.2.22.RELEASE</version><!-- $NO-MVN-MAN-VER$ -->
		</dependency>

		<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>opensaml</artifactId>
			<version>2.6.4</version><!--$NO-MVN-MAN-VER$-->
			<exclusions>
				<exclusion>
					<artifactId>esapi</artifactId>
					<groupId>org.owasp.esapi</groupId>
				</exclusion>
				<exclusion>
					<artifactId>not-yet-commons-ssl</artifactId>
					<groupId>ca.juliusdavies</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-httpclient</artifactId>
					<groupId>commons-httpclient</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xmltooling</artifactId>
					<groupId>org.opensaml</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.10</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
			
		<dependency>
		    <groupId>org.hibernate.validator</groupId>
		    <artifactId>hibernate-validator</artifactId>
		    <version>6.0.11.Final</version>
		</dependency>
		
		<dependency>
		    <groupId>javax.validation</groupId>
		    <artifactId>validation-api</artifactId>
		    <version>2.0.1.Final</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
				
		<dependency>
			<artifactId>tomcat-embed-core</artifactId>
			<groupId>org.apache.tomcat.embed</groupId>
			<version>8.5.32</version><!--$NO-MVN-MAN-VER$-->
			<scope>provided</scope>
		</dependency>
		
		
		<dependency>
			<artifactId>tomcat-embed-el</artifactId>
			<groupId>org.apache.tomcat.embed</groupId>
			<version>8.5.32</version><!--$NO-MVN-MAN-VER$-->
			<scope>provided</scope>
		</dependency>
		
		
		<dependency>
			<artifactId>tomcat-embed-websocket</artifactId>
			<groupId>org.apache.tomcat.embed</groupId>
			<version>8.5.32</version><!--$NO-MVN-MAN-VER$-->
			<!-- <version>8.5.16</version> -->
			<scope>provided</scope>
		</dependency>
		<!--  -->

	
		<dependency>  
	            <groupId>org.springframework.boot</groupId>  
	            <artifactId>spring-boot-starter-test</artifactId>  
	            <scope>test</scope>
	            <!-- <exclusions>
	            	<exclusion>
	            		<artifactId>spring-test</artifactId>
	            		<groupId>org.springframework</groupId>
	            	</exclusion>
	            </exclusions> -->
		</dependency>
		
	
		<dependency>
			<groupId>org.springframework.ldap</groupId>
			<artifactId>spring-ldap-core</artifactId>
			<version>2.3.2.RELEASE</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
		<dependency>
			<groupId>org.springframework.ldap</groupId>
			<artifactId>spring-ldap-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>commons-httpclient</artifactId>
					<groupId>commons-httpclient</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		
		

		<dependency>
				<groupId>org.easyframe</groupId>
				<artifactId>jef-maven-plugin</artifactId>
				<version>1.11.10.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.easyframe</groupId>
				<artifactId>spring-data-geequery</artifactId>
				<version>1.11.10.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.easyframe</groupId>
				<artifactId>common-orm</artifactId>
				<version>1.11.10.RELEASE</version>
				<exclusions>
					<exclusion>
						<groupId>com.belerweb</groupId>
						<artifactId>pinyin4j</artifactId>
					</exclusion>
				</exclusions>
		</dependency>



		<dependency>
		   <groupId>org.apache.activemq</groupId>
		   <artifactId>activemq-client</artifactId>
		   <version>5.15.4</version><!--$NO-MVN-MAN-VER$-->
		</dependency>

		<dependency>
		   <groupId>xerces</groupId>
		   <artifactId>xercesImpl</artifactId>
		   <version>2.12.0</version><!--$NO-MVN-MAN-VER$-->
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>log4j-over-slf4j</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
				<exclusion>
                    <groupId>ch.qos.logback</groupId>
                   <artifactId>logback-classic</artifactId>
                </exclusion>
			</exclusions> 
			
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		    <!-- <version>2.0.3.RELEASE</version> --><!--$NO-MVN-MAN-VER$-->
		    <exclusions>
		    	<exclusion>
		    		<artifactId>hibernate-validator</artifactId>
		    		<groupId>org.hibernate</groupId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>spring-boot-actuator</artifactId>
					<groupId>org.springframework.boot</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<!-- <scope>provided</scope>	 -->
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.4</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
	
		<dependency>
			<groupId>com.fasterxml</groupId>
			<artifactId>classmate</artifactId>
			<version>1.3.4</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
		
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
		</dependency>

		<!-- <dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		
		<dependency>
				<groupId>org.logback-extensions</groupId>
				<artifactId>logback-ext-spring</artifactId>
				<version>0.1.4</version>
		</dependency> -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.17</version><!--$NO-MVN-MAN-VER$-->
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.data</groupId>
		    <artifactId>spring-data-commons</artifactId>
		   <!--  <version>1.13.11.RELEASE</version> --><!--$NO-MVN-MAN-VER$-->
		    
		    <version>1.13.23.RELEASE</version>
		</dependency>


		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.6</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
		
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.9</version><!--$NO-MVN-MAN-VER$-->
		</dependency>


	</dependencies>

	<build>

	
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version><!--$NO-MVN-MAN-VER$-->
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>utf-8</encoding>
				</configuration>
			</plugin>
			
			<!-- 对ORM的实体进行静态增强插件 -->
			<plugin>
				<groupId>org.easyframe</groupId>
				<artifactId>jef-maven-plugin</artifactId>
				<version>1.11.9.4</version>
				<executions>
					<execution>
						<goals>
							<goal>enhance</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<!-- 在部分Maven插件上，为了避免非标准的Maven声明周期描述报错，需要添加下面这段 -->
			<plugin>
				<groupId>org.eclipse.m2e</groupId>
				<artifactId>lifecycle-mapping</artifactId>
				<configuration>
					<lifecycleMappingMetadata>
						<pluginExecutions>
							<pluginExecution>
								<pluginExecutionFilter>
									<groupId>org.easyframe</groupId>
									<artifactId>jef-maven-plugin</artifactId>
									<versionRange>[1.0,)</versionRange>
									<goals>
										<goal>enhance</goal>
									</goals>
								</pluginExecutionFilter>
								<action>
									<ignore />
								</action>
							</pluginExecution>
						</pluginExecutions>
					</lifecycleMappingMetadata>
				</configuration>
			</plugin>
			<!-- findbugs -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.4</version>
				<configuration>
					<!-- <excludeFilterFile>tools/findbugs/findbugs-exclude.xml</excludeFilterFile> -->
					<threshold>High</threshold>
					<effort>Default</effort>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlOutputDirectory>target/site/findbugs</findbugsXmlOutputDirectory>
				</configuration>
			</plugin>
			
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>false</skip>
					<argLine>-Xms256m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=64m -Dfile.encoding=utf-8</argLine>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<systemPropertyVariables>
						<io.springfox.staticdocs.outputDir>${project.build.directory}/swagger</io.springfox.staticdocs.outputDir>
						<io.swagger.json.uris>/v2/api-docs?group=API,/v2/api-docs?group=service,/v2/api-docs?group=service1</io.swagger.json.uris>
						<io.swagger.json.output.name>swagger-demo-api.json,swagger-ncg-api.json,swagger-ioc-api.json</io.swagger.json.output.name>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<format>xml</format>
					<encoding>utf-8</encoding>
					<instrumentation>
					</instrumentation>
				</configuration>
			</plugin>
			
			
			<!-- war打包插件, 设定war包名称不带版本号 --> 
	        <!-- <plugin> 
	            <groupId>org.apache.maven.plugins</groupId> 
	            <artifactId>maven-war-plugin</artifactId> 
	            <version>2.5</version> 
	            <configuration> 
	                <warName>${project.artifactId}</warName> 
	                <webResources> 
	                    <resource> 
	                        <directory>target\ncg.war</directory> 
	                        <includes> 
	                            <include>*.*</include> 
	                            <include>**/*.*</include>  
	                        </includes>  
	                        <filtering>true</filtering>  
	                    </resource>  
	                </webResources>  
	            </configuration>  
	        </plugin> -->
			<!-- 加了这项配置，war包会有两个同名jar，因此去掉 -->
			<!-- <plugin> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-maven-plugin</artifactId>
				</plugin> -->		
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.easyframe</groupId>
										<artifactId>
											jef-maven-plugin
										</artifactId>
										<versionRange>
											[1.11.0,)
										</versionRange>
										<goals>
											<goal>enhance</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<!-- 内部开发版本发布库 -->
	<distributionManagement>
	</distributionManagement>
</project>
